[gd_scene load_steps=42 format=2]

[ext_resource path="res://Feme.gd" type="Script" id=1]
[ext_resource path="res://female/Walk (6).png" type="Texture" id=2]
[ext_resource path="res://female/Walk (2).png" type="Texture" id=3]
[ext_resource path="res://female/Walk (5).png" type="Texture" id=4]
[ext_resource path="res://female/Walk (8).png" type="Texture" id=5]
[ext_resource path="res://female/Walk (10).png" type="Texture" id=6]
[ext_resource path="res://female/Walk (1).png" type="Texture" id=7]
[ext_resource path="res://female/Walk (3).png" type="Texture" id=8]
[ext_resource path="res://female/Walk (4).png" type="Texture" id=9]
[ext_resource path="res://female/Walk (9).png" type="Texture" id=10]
[ext_resource path="res://female/Walk (7).png" type="Texture" id=11]
[ext_resource path="res://female/Idle (9).png" type="Texture" id=12]
[ext_resource path="res://female/Idle (10).png" type="Texture" id=13]
[ext_resource path="res://female/Idle (11).png" type="Texture" id=14]
[ext_resource path="res://female/Idle (14).png" type="Texture" id=15]
[ext_resource path="res://female/Idle (15).png" type="Texture" id=16]
[ext_resource path="res://female/Idle (13).png" type="Texture" id=17]
[ext_resource path="res://female/Idle (12).png" type="Texture" id=18]
[ext_resource path="res://female/Dead (3).png" type="Texture" id=19]
[ext_resource path="res://female/Dead (8).png" type="Texture" id=20]
[ext_resource path="res://female/Idle (2).png" type="Texture" id=21]
[ext_resource path="res://female/Idle (8).png" type="Texture" id=22]
[ext_resource path="res://female/Idle (7).png" type="Texture" id=23]
[ext_resource path="res://female/Dead (1).png" type="Texture" id=24]
[ext_resource path="res://female/Dead (7).png" type="Texture" id=25]
[ext_resource path="res://female/Dead (4).png" type="Texture" id=26]
[ext_resource path="res://female/Dead (5).png" type="Texture" id=27]
[ext_resource path="res://female/Dead (2).png" type="Texture" id=28]
[ext_resource path="res://female/Dead (9).png" type="Texture" id=29]
[ext_resource path="res://female/Dead (10).png" type="Texture" id=30]
[ext_resource path="res://female/Dead (11).png" type="Texture" id=31]
[ext_resource path="res://female/Idle (1).png" type="Texture" id=32]
[ext_resource path="res://female/Idle (3).png" type="Texture" id=33]
[ext_resource path="res://female/Dead (12).png" type="Texture" id=34]
[ext_resource path="res://female/Idle (5).png" type="Texture" id=35]
[ext_resource path="res://female/Dead (6).png" type="Texture" id=36]
[ext_resource path="res://female/Idle (6).png" type="Texture" id=37]
[ext_resource path="res://female/Idle (4).png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 36 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 34 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 21 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135.25, 104.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 101.25, 70 )

[node name="Feme" type="Node2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="DanoPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DanoPlayer"]
position = Vector2( 23, 99 )
shape = SubResource( 2 )

[node name="DeadZombie" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZombie"]
position = Vector2( 47.5, -72.5 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="DanoPlayer" to="." method="_on_DanoPlayer_body_entered"]
[connection signal="body_entered" from="DeadZombie" to="." method="_on_DeadZombie_body_entered"]
